# hwpx-hwp-mcp-server

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: unit-tests.yml
src/hwpx_hwp_mcp/: __init__.py  __main__.py  models.py  server.py
src/hwpx_hwp_mcp/backend/: __init__.py  errors.py  hancom_com.py  pandas_stub.py
src/hwpx_hwp_mcp/tools/: __init__.py  batch.py  create.py  edit.py  format_extra.py  output.py  read.py  session.py  structure.py  template.py
src/hwpx_hwp_mcp/utils/: __init__.py  paths.py  tables.py
tests/smoke/: active_reuse.py  blank_reuse.py  cell_shade.py  cycle.py  format_roundtrip.py  insert_table_with_data.py  list_tools.py  new_features.py  page_sprint1.py  shared_instance.py  table_sprint1.py
tests/unit/: test_errors.py  test_hancom_session.py  test_paths.py  test_tables_dsl.py
